fix(google-auth): Se ajustaron los z-index para habilitar la interacción de clic.

--- a/src/css/loginUsuarios.css
+++ b/src/css/loginUsuarios.css
@@ -5,15 +5,19 @@
   overflow: hidden;
   position: relative;
   background: none;
+
   .background-login-image {
     display: none;
   }
+
   .background-login-image-mobile {
     position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     width: 100%;
     height: 100%;
-    z-index: 0;
+    z-index: -1;
     object-fit: cover;
   }
 }
@@ -27,7 +31,6 @@
   border-bottom: 2px solid rgb(0, 255, 0);
   background-color: transparent;
   position: relative;
-  z-index: 1;
 }
 
 .login-navbar {
@@ -88,7 +91,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background-color: #000;
+  background-color: transparent;
 }
 
 .container-login {
@@ -103,7 +106,6 @@
   justify-content: center;
   margin-top: 0;
   padding: 0 1rem;
-  z-index: 2;
 }
 
 .login-card {
@@ -111,7 +113,6 @@
   max-width: 450px;
   margin: 0 auto;
   border-radius: 2px;
-
   background-color: transparent;
 }
 
@@ -402,6 +403,8 @@
 
     .background-login-image {
       position: absolute;
+      top: 0;
+      left: 0;
       display: flex;
       width: 100%;
       height: 100%;
